--- a/todo-mongodb-deployment.yaml
+++ b/todo-mongodb-deployment.yaml
@@ -24,7 +24,20 @@ spec:
         io.kompose.service: todo-mongodb
     spec:
       containers:
-        - image: mongo
+        - env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: todo-app-secrets
+                  key: mongo_user
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: todo-app-secrets
+                  key: mongo_pass
+            - name: MONGO_INITDB_DATABASE
+              value: todo-app
+          image: mongo
           name: todo-mongodb
           ports:
             - containerPort: 27017
